--- a/qml-mooc/coding_assignments/04_Classical_and_Quantum_Many-Body_Physics.ipynb
+++ b/qml-mooc/coding_assignments/04_Classical_and_Quantum_Many-Body_Physics.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -40,7 +43,10 @@
      "end_time": "2018-11-19T20:00:27.336290Z",
      "start_time": "2018-11-19T20:00:27.331856Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -61,6 +67,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise1",
@@ -96,7 +105,10 @@
      "end_time": "2018-11-19T20:00:27.407303Z",
      "start_time": "2018-11-19T20:00:27.389825Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -113,6 +125,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise2",
@@ -145,7 +160,10 @@
      "end_time": "2018-11-19T20:00:27.549002Z",
      "start_time": "2018-11-19T20:00:27.454734Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -172,6 +190,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise3",
@@ -202,7 +223,10 @@
      "end_time": "2018-11-19T20:00:27.575330Z",
      "start_time": "2018-11-19T20:00:27.557800Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -218,6 +242,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise4",
@@ -259,7 +286,10 @@
      "end_time": "2018-11-19T20:00:28.652206Z",
      "start_time": "2018-11-19T20:00:28.578778Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -275,6 +305,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise5",
@@ -301,7 +334,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -323,7 +359,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -351,7 +390,10 @@
      "end_time": "2018-11-19T20:00:28.755692Z",
      "start_time": "2018-11-19T20:00:28.731315Z"
     },
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -367,6 +409,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise6",
@@ -393,7 +438,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -411,7 +459,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -430,7 +481,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -447,6 +501,9 @@
     "collapsed": true,
     "deletable": false,
     "editable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "grade": true,
      "grade_id": "exercise7",
@@ -486,18 +543,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
